--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,23 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/style.css">
-
     <title>Hi!</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Hello from Render</h1>
-        {% if name %}
-        <h2>and hello to {{name}}</h2>
-        {% endif %}
-        
-        <div class="navigation">
-            <a href="/guestbook" class="nav-link">📝 Sign the Guestbook</a>
-        </div>
-    </div>
+    <h1>Hello from Render</h1>
+    {% if name %}
+    <h2>and hello to {{name}}</h2>
+    {% endif %}
+    
+    <p><a href="/guestbook">Sign the Guestbook</a></p>
 </body>
 </html>
